--- a/htdocs/index.html
+++ b/htdocs/index.html
@@ -1,7 +1,8 @@
 <?xml version='1.0' encoding='utf-8'?>
 <!DOCTYPE html 
      PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN"
-     "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
+     "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd"
+>
 <html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en" lang="en">
 
 <head>
@@ -173,8 +174,9 @@ or, possibly, because it's compiled in.
 </p>
 
 <p>
-Get the zero-installation code:
-<a href="zero-inst-0.1.4.tgz">Zero-Installtion-0.1.4 ALPHA PROTOTYPE</a>.
+Get the zero-installation code: Zero-Installtion-0.1.4 ALPHA PROTOTYPE
+[ <a href="http://prdownloads.sourceforge.net/zero-install/zero-inst-0.1.4.tgz">
+Mirrors</a> ].
 </p>
 <p>
 Enter the directory and compile it (it requires
@@ -206,7 +208,7 @@ Ready...
 Leave that running and switch to another window. Now check it worked:
 </p>
 <pre>
-# cat /uri/http/www.ecs.soton.ac.uk/~tal00r/zero-installation/test.txt
+# cat /uri/http/zero-install.sourceforge.net/test.txt
 It worked!
 </pre>
 
@@ -513,6 +515,10 @@ not.
 </p>
 
 <p style='float: right;'>
+<a href="http://sourceforge.net/projects/zero-install">
+<img border="0" width="88" height="31" alt="SF logo"
+     src="http://sourceforge.net/sflogo.php?group_id=7023&amp;type=1" /></a>
+
 <a class='outside' href="http://validator.w3.org/check/referer"><img
   src="http://www.w3.org/Icons/valid-xhtml10"
   alt="Valid XHTML 1.0!" height="31" width="88" /></a>
