--- a/htdocs/index.html
+++ b/htdocs/index.html
@@ -516,7 +516,7 @@ not.
 
 <p style='float: right;'>
 <a href="http://sourceforge.net/projects/zero-install">
-<img border="0" width="88" height="31" alt="SF logo"
+<img width="88" height="31" alt="SF logo"
      src="http://sourceforge.net/sflogo.php?group_id=7023&amp;type=1" /></a>
 
 <a class='outside' href="http://validator.w3.org/check/referer"><img
