Link to ROX stuff.

--- a/htdocs/index.html
+++ b/htdocs/index.html
@@ -247,15 +247,17 @@ This is another shell script
 </pre>
 <p>
 If you'd like to try a graphical application, run this command to open
-a ROX-Filer window showing Archive. Click on it to run it .
+a <a href="http://rox.sf.net/rox_filer.php3">ROX-Filer</a> window showing
+<a href="http://rox.sf.net/archive.php3">Archive</a>. Click on it to run it .
 </p>
 <pre>
 $ rox /uri/http/www.ecs.soton.ac.uk/~tal00r/zero-installation/archive-1.9.1
 </pre>
 
 <p>
-Note that Archive requires ROX-Lib2 to run. That's OK; ROX-Lib2 will
-be run from the zero-installation system automatically.
+Note that Archive requires <a href="http://rox.sf.net/rox_lib.php3">ROX-Lib2</a>
+to run. That's OK; ROX-Lib2 will be run from the zero-installation system
+automatically.
 </p>
 
 <p>
