Warn about needing rox.

--- a/htdocs/index.html
+++ b/htdocs/index.html
@@ -249,6 +249,8 @@ This is another shell script
 If you'd like to try a graphical application, run this command to open
 a <a href="http://rox.sf.net/rox_filer.php3">ROX-Filer</a> window showing
 <a href="http://rox.sf.net/archive.php3">Archive</a>. Click on it to run it .
+(note that ROX-Filer and pygtk are NOT yet in the zero-install system, so
+you do need them installed already)
 </p>
 <pre>
 $ rox /uri/http/www.ecs.soton.ac.uk/~tal00r/zero-installation/archive-1.9.1
