--- a/htdocs/index.html
+++ b/htdocs/index.html
@@ -345,8 +345,8 @@ that.</li>
  <li>Load the actual library by it's path.</li>
 </ol>
 <p>
-It also removes the need to run ldconfig at install time (handly,
-since there is no 'install time';-), losing a major source of errors
+It also removes the need to run ldconfig at install time (handy,
+since there is no 'install time' ;-), losing a major source of errors
 and user confusion.
 </p>
 <p>
