Added screenshot of Archive.

--- a/htdocs/index.html
+++ b/htdocs/index.html
@@ -256,6 +256,11 @@ you do need them installed already)
 $ rox /uri/http/www.ecs.soton.ac.uk/~tal00r/zero-installation/archive-1.9.1
 </pre>
 
+<p style='text-align:center'>
+<img src='archive.png' width='540' height='140'
+     alt='ROX-Filer window showing remote Archive application' />
+</p>
+
 <p>
 Note that Archive requires <a href="http://rox.sf.net/rox_lib.php3">ROX-Lib2</a>
 to run. That's OK; ROX-Lib2 will be run from the zero-installation system
