--- a/htdocs/index.html
+++ b/htdocs/index.html
@@ -56,6 +56,7 @@ because the Zero Install system has cached everything locally.
 
 <p class='q'>What about package management systems like APT?</p>
 
+<p>
 These require a central authority to maintain the database. For example, you
 can't install Memo using APT, because Debian don't package it. The best an
 author can do is provide Debian .deb packages on the site. But then the user
@@ -66,13 +67,14 @@ Also, a user installing from a .deb, .rpm, etc still has to enter the root
 password and run a script as root. This is inconvenient and a security risk.
 Zero Install allows uses to run software without root privileges.
 </p>
+<p>
 See the <a href="compare.html">comparison with other systems</a> document
 for a more detailed list of the advantages of Zero Install.
 </p>
 
 <p class='q'>I have more questions!</p>
 
-<p>Try <a href="faq.html">the FAQ</a>.
+<p>Try <a href="faq.html">the FAQ</a>.</p>
 
 <h2>Setting up the zero-installation system</h2>
 
