--- a/htdocs/old.html
+++ b/htdocs/old.html
@@ -228,7 +228,7 @@ you do need them installed already)
 </pre>
 
 <p style="text-align: center;">
-<img src="old_files/archive.png" width="540" height="140" alt="ROX-Filer window showing remote Archive application">
+<img src="old_files/archive.png" width="540" height="140" alt="ROX-Filer window showing remote Archive application" />
 </p>
 
 <p>
@@ -493,9 +493,9 @@ not.
 
 <p style="float: right;">
 <a href="http://sourceforge.net/projects/zero-install">
-<img width="88" height="31" alt="SF logo" src="old_files/sflogo.png"></a>
+<img width="88" height="31" alt="SF logo" src="old_files/sflogo.png" /></a>
 
-<a class="outside" href="http://validator.w3.org/check/referer"><img src="old_files/valid-xhtml10.png" alt="Valid XHTML 1.0!" height="31" width="88"></a>
+<a class="outside" href="http://validator.w3.org/check/referer"><img src="old_files/valid-xhtml10.png" alt="Valid XHTML 1.0!" height="31" width="88" /></a>
 </p>
 
 </body></html>
