--- a/htdocs/old.html
+++ b/htdocs/old.html
@@ -491,11 +491,14 @@ If a program relies on a bugfix in libfoo-1.2.6 then it can check that
 not.
 </p>
 
-<p style="float: right;">
+<p style='float: right;'>
 <a href="http://sourceforge.net/projects/zero-install">
-<img width="88" height="31" alt="SF logo" src="old_files/sflogo.png" /></a>
+<img width="88" height="31" alt="SF logo"
+     src="http://sourceforge.net/sflogo.php?group_id=7023&amp;type=1" /></a>
 
-<a class="outside" href="http://validator.w3.org/check/referer"><img src="old_files/valid-xhtml10.png" alt="Valid XHTML 1.0!" height="31" width="88" /></a>
+<a class='outside' href="http://validator.w3.org/check/referer"><img
+  src="http://www.w3.org/Icons/valid-xhtml10"
+  alt="Valid XHTML 1.0!" height="31" width="88" /></a>
 </p>
 
 </body></html>
