Added .0inst.xml creator.

--- a/htdocs/index.html
+++ b/htdocs/index.html
@@ -44,7 +44,7 @@ titlebar):
 <p>
 Click on Memo to run it, and it will run. Now, Memo depends on ROX-Lib2,
 which requires pygtk, with needs python2.2 and GTK+-2, which needs glib,
-pango, AKT and pkg-config. But that's OK, Memo runs everything it
+pango, AKT and pkg-config. But that's OK; Memo runs everything it
 needs directly from the remote machines where they're stored.
 </p>
 
@@ -78,15 +78,47 @@ for a more detailed list of the advantages of Zero Install.
 
 <h2>Setting up the zero-installation system</h2>
 
-<!--
 <p>
-<a href="http://www.osnews.com/story.php?news_id=2949">The Very Verbose Guide to Updating and Compiling Your Debian Kernel</a>
-</p> -->
+Although the system makes installing other software very easy, the Zero
+Install system itself still requires some work to install.
+</p>
+
+<div>Please DO NOT install this software on important machines. It is under
+heavy developement and has not yet been well tested.</div>
 
 <p>
-The system is currently being rewritten. New instructions will appear shortly.
-In the mean-time, here are the <a href="old.html">old instructions</a>.
+That said, I'm running it on my machine without any problems so far.
 </p>
+
+<p>The Zero Install system requires a small Linux kernel module to provide
+the /uri directory. Like all kernel modules, you <strong>must</strong>
+compile this using the actual kernel headers for the kernel you're actually
+running. In practise, this means that you should have compiled your own
+kernel (eg, from <a href="http://kernel.org">kernel.org</a>) and be running
+it. Using a stock distribution kernel is a bad idea. You may get a kernel
+crash, and will probably have to reboot (this affects all kernel modules,
+not just the zero-install one).
+</p>
+
+
+<p>
+There are plenty of guides on the net if you don't feel confident about
+compiling your own kernel. For example, 
+<a href="http://www.osnews.com/story.php?news_id=2949">The Very Verbose Guide to Updating and Compiling Your Debian Kernel</a> and
+<a href="http://www.osnews.com/story.php?news_id=443">Compiling the Linux Kernel</a>.
+</p>
+
+<p>OK, now <a href="todo">download Zero Install</a>. Extract it, and do the
+usual configure, make, install thing (things you type are shown with $
+at the start):
+</p>
+
+<pre>
+$ tar xzf zero-inst-0.1.5.tgz
+$ cd zero-inst-0.1.5
+$ ./configure
+
+</pre>
 
 <p style='float: right;'>
 <a href="http://sourceforge.net/projects/zero-install">
