Updated for new release.

--- a/htdocs/faq.html
+++ b/htdocs/faq.html
@@ -14,6 +14,8 @@
 <h1>The Zero Install system</h1>
 <p class='author'>Thomas Leonard &lt;tal197 at users.sf.net&gt;, 2003</p>
 
+<p>Back to the <a href="index.html">main page</a>.</p>
+
 <h2>FAQ</h2>
 
 <h3>I haven't tried it yet, but it sounds really complicated</h3>
@@ -229,6 +231,8 @@ not.
   src="http://www.w3.org/Icons/valid-xhtml10"
   alt="Valid XHTML 1.0!" height="31" width="88" /></a>
 </p>
+
+<p>Back to the <a href="index.html">main page</a>.</p>
 
 </body>
 </html>
