--- a/htdocs/index.html
+++ b/htdocs/index.html
@@ -65,7 +65,7 @@ Debian's system.
 </p><p>
 Also, a user installing from a .deb, .rpm, etc still has to enter the root
 password and run a script as root. This is inconvenient and a security risk.
-Zero Install allows uses to run software without root privileges.
+Zero Install allows users to run software without root privileges.
 </p>
 <p>
 See the <a href="compare.html">comparison with other systems</a> document
@@ -102,8 +102,8 @@ will need to install pygtk, etc, as normal for now.
 
 <p>
 Refreshing currently requires deleting stuff from the cache directory manually.
-In the finished system, clicking on the filer's refresh button will do this.
-Also the progress indicator mentioned above could use some work ;-)
+In the finished system, clicking on the filer's refresh button will trigger
+a refresh. Also the progress indicator mentioned above could use some work ;-)
 </p>
 
 <p class='q'>Do I have to enter the full URI everytime I want to run a
