--- a/htdocs/index.html
+++ b/htdocs/index.html
@@ -103,7 +103,7 @@ will need to install pygtk, etc, as normal for now.
 <p>
 Refreshing currently requires deleting stuff from the cache directory manually.
 In the finished system, clicking on the filer's refresh button will trigger
-a refresh. Also the progress indicator mentioned above could use some work ;-)
+a refresh. Also, the progress indicator mentioned above could use some work ;-)
 </p>
 
 <p class='q'>Do I have to enter the full URI everytime I want to run a
