Show how to open the demo directory.

--- a/htdocs/index.html
+++ b/htdocs/index.html
@@ -50,7 +50,7 @@ needs directly from the remote machines where they're stored.
 
 <p>
 The first time you ran Memo, a progress indicator appeared showing the
-download progress. If you quit it and run it again, it will start instantly,
+download progress. If you quit Memo and run it again, it will start instantly,
 because the Zero Install system has cached everything locally.
 </p>
 
